--- a/fmn/NewFile1.html
+++ b/fmn/NewFile1.html
@@ -1,5 +1,5 @@
 <html lang="ko">
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
