--- a/fmn/NewFile1.html
+++ b/fmn/NewFile1.html
@@ -397,15 +397,10 @@
 				<tr>
 					<th>주발</th>
 					<td colspan="2">
-						<input name="Foot" type="radio" value="Left" />왼발 
-						<input name="Foot" type="radio" value="Right" />오른발
+						<input id="LFoot"/>왼발  <select id="MainFootCnt" style="min-width: 20px;"></select>
+						<input id="RFoot"/>오른발 <select id="MainFootCnt" style="min-width: 20px;"></select>
 					</td>
-					<td>
-						<select id="MainFootCnt" style="min-width: 120px;">
-							<option value="">--주발수치--</option>
-						</select>
-						
-					</td>
+					
 				</tr>
 				<tr>
 					<th>세트피스</th>
