--- a/fmn/FMNUserMaker.html
+++ b/fmn/FMNUserMaker.html
@@ -9,8 +9,20 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
-
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+		
+		h1 {
+			font-family: 'Black Han Sans', sans-serif;
+		}
+		* {
+			font-family: 'Do Hyeon', sans-serif;
+		}
+	</style>
+	
 	<body>
+		<h1 class="text-center">FMN 신규 선수 신청</h1>
         <table class="table table-Primary table-striped table-hover table-bordered">
 			<tbody>
 				<tr>
