--- a/fmn/index_fmn.html
+++ b/fmn/index_fmn.html
@@ -66,7 +66,7 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">FMN S22 SHOP</h6>
-                        <a class="collapse-item" href="javascript(0)" onclick="Lclick('FMNShopHelperS22.html')">상점하기</a>
+                        <a class="collapse-item" href="javascript:void(0)" onclick="Lclick('FMNShopHelperS22.html')">상점하기</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">FMN TABS (팝업)</h6>
                         
