1. Remove Unused Files
2. Total Unit Change

--- a/fmn/FMNShopHelperS22.html
+++ b/fmn/FMNShopHelperS22.html
@@ -633,7 +633,7 @@
 				totalPay += Number($("#fusionDivisionCnt").val()) * 100;
 			}
 			
-			resultText += "총 " + totalPay + "p"
+			resultText += "총 " + totalPay + "츄르"
 
 			$("#result").text(resultText);
 		}
