1. Add RCA Weight

--- a/fmn/FMNShopHelperS22.html
+++ b/fmn/FMNShopHelperS22.html
@@ -563,7 +563,8 @@
 		});
 		
 		$("#btnPopup").on("click", function() {
-			winPop("https://img.fmnation.net/files/attach/images/6765486/774/613/078/7b2a31289f330d4e63668e51cdd64054.jpg", {name:'능력치',width:705,height:331}); return false;
+			winPop("https://img.flayus.com/files/attach/images/101449077/213/541/101/0711dda6f5fab128b069fe85e6c739c9.jpg", {name:'RCA 가중치',width:705,height:331}); return false;
+			
 		});
 
 		$("#btnStat").on("click", function() {
