1. RCA Weight Size

--- a/fmn/FMNShopHelperS22.html
+++ b/fmn/FMNShopHelperS22.html
@@ -21,7 +21,7 @@
 	<body>
 		<h1 class="text-center">FMN S22 상점</h1>
         <input type="hidden" id="maximum" value="7">
-		<button id="btnPopup" class="btn btn-primary">스탯보기</button>
+		<button id="btnPopup" class="btn btn-primary">어빌가중치 보기</button>
 		<button id="btnStat" class="btn btn-primary">능력치탭 바로가기</button>
 		<table class="table table-dark table-striped table-hover table-bordered">
 			<tbody>
@@ -563,7 +563,7 @@
 		});
 		
 		$("#btnPopup").on("click", function() {
-			winPop("https://img.flayus.com/files/attach/images/101449077/213/541/101/0711dda6f5fab128b069fe85e6c739c9.jpg", {name:'RCA 가중치',width:705,height:331}); return false;
+			winPop("https://img.flayus.com/files/attach/images/101449077/213/541/101/0711dda6f5fab128b069fe85e6c739c9.jpg", {name:'능력치',width:705,height:757}); return false;
 			
 		});
 
