--- a/fmn/fmn_util/FMNShopHelperS22_V2.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V2.html
@@ -80,6 +80,11 @@
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>선수 생성 도우미(기존)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="FMNUserMaker_V2.html">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>선수 생성 도우미(신규)</span></a>
+            </li>            
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
