--- a/fmn/fmn_util/index.html
+++ b/fmn/fmn_util/index.html
@@ -21,6 +21,17 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+		
+		h1 {
+			font-family: 'Black Han Sans', sans-serif;
+		}
+		* {
+			font-family: 'Do Hyeon', sans-serif;
+		}
+	</style>
 
 <body id="page-top">
 
@@ -67,6 +78,11 @@
                     <span>선수 생성 도우미(기존)</span></a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="FMNUserMaker_V2.html">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>선수 생성 도우미(신규)</span></a>
+            </li>            
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="FMNShopHelperS22_V2.html">
