--- a/fmn/fmn_util/FMNUserMaker_V2.html
+++ b/fmn/fmn_util/FMNUserMaker_V2.html
@@ -13,6 +13,8 @@
 	
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+	<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>    
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
@@ -27,14 +29,9 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
-		@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
-		
-		h1 {
-			font-family: 'Black Han Sans', sans-serif;
-		}
+		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
 		* {
-			font-family: 'Do Hyeon', sans-serif;
+			font-family: 'Noto Sans KR', sans-serif;
 		}
 	</style>
 	<body id="page-top">
