--- a/fmn/fmn_util/FMNUserMaker_V2.html
+++ b/fmn/fmn_util/FMNUserMaker_V2.html
@@ -29,9 +29,9 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
 		* {
-			font-family: 'Noto Sans KR', sans-serif;
+			font-family: 'Yeon Sung', cursive;
 		}
 	</style>
 	<body id="page-top">
