--- a/fmn/fmn_util/FMNShopHelperS22_V2.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V2.html
@@ -27,15 +27,12 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
-		@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
-		
-		h1 {
-			font-family: 'Black Han Sans', sans-serif;
-		}
+	
+		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
 		* {
-			font-family: 'Do Hyeon', sans-serif;
+			font-family: 'Noto Sans KR', sans-serif;
 		}
+	
 	</style>
 	<body id="page-top">
 	    <!-- Page Wrapper -->
