--- a/fmn/fmn_util/FMNShopHelperS22_V2.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V2.html
@@ -646,7 +646,7 @@
 		});
 		
 		$("#btnPopup").on("click", function() {
-			winPop("https://img.flayus.com/files/attach/images/101449077/213/541/101/0711dda6f5fab128b069fe85e6c739c9.jpg", {name:'능력치',width:705,height:757}); return false;
+			winPop("https://https://cktnswn010.github.io/fmn/fmn_util/img/Position_CA.jpg", {name:'능력치',width:705,height:757}); return false;
 			
 		});
 
