--- a/fmn/fmn_util/FMNShopHelperS22_V2.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V2.html
@@ -35,6 +35,7 @@
 	
 	</style>
 	<body id="page-top">
+		<div class="container">
 	    <!-- Page Wrapper -->
 	    <div id="wrapper">
 	
@@ -311,6 +312,8 @@
         <!-- End of Content Wrapper -->    
     </div>
     <!-- End of Page Wrapper -->		
+    </div>
+    <!--  End of container -->
 	</body>
 	<script type="text/javascript">
 		var endorphinCount = 0;
