--- a/fmn/fmn_util/FMNShopHelperS22_V2.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V2.html
@@ -35,9 +35,9 @@
 	
 	</style>
 	<body id="page-top">
-		<div class="container">
+		
 		    <!-- Page Wrapper -->
-		   <div id="wrapper">
+		    <div id="wrapper">
 		
 		        <!-- Sidebar -->
 		        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
@@ -98,8 +98,9 @@
 		
 		
 		        </ul>	
-		    <div id="content-wrapper" class="d-flex flex-column">
-			
+		    
+	    	<!-- End of Page Wrapper -->		    
+			<div id="content-wrapper" class="d-flex flex-column">
 				<h1 class="text-center">FMN S22 상점</h1>
 		        <input type="hidden" id="maximum" value="7">
 				<button id="btnPopup" class="btn btn-primary">어빌가중치 보기</button>
