--- a/fmn/fmn_util/FMNShopHelperS22_V2.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V2.html
@@ -100,7 +100,11 @@
 		        </ul>	
 		    
 	    	<!-- End of Page Wrapper -->		    
-			<div id="content-wrapper" class="d-flex flex-column">
+			<!-- 
+				<div id="content-wrapper" class="d-flex flex-column">
+				버튼 크기 최대화 방지 
+			-->
+			<div id="content-wrapper">
 				<h1 class="text-center">FMN S22 상점</h1>
 		        <input type="hidden" id="maximum" value="7">
 				<button id="btnPopup" class="btn btn-primary">어빌가중치 보기</button>
