--- a/fmn/fmn_util/FMNShopHelperS22_V3.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V3.html
@@ -48,13 +48,13 @@
     						<div class="collapse navbar-collapse" id="navbarNav">
       							<ul class="navbar-nav">
       								<li class="nav-item">
-        								<button class="btn btn-outline-primary me-2" type="button"><a class="nav-link" href="FMNExUserMaker_V2.html">선수 생성 도우미(기존)</a></button>
+        								<a class="nav-link" href="FMNExUserMaker_V2.html">선수 생성 도우미(기존)</a>
         							</li>
         							<li class="nav-item">
-        								<button class="btn btn-outline-primary me-2" type="button"><a class="nav-link" href="FMNUserMaker_V2.html">선수 생성 도우미(신규)</a></button>
+        								<a class="nav-link" href="FMNUserMaker_V2.html">선수 생성 도우미(신규)</a>
         							</li>
         							<li class="nav-item">
-        								<button class="btn btn-outline-primary me-2" type="button"><a class="nav-link active" aria-current="page" href="FMNShopHelperS22_V2.html">상점 도우미 (S22)</a></button>
+        								<a class="nav-link active" aria-current="page" href="FMNShopHelperS22_V2.html">상점 도우미 (S22)</a>
         							</li>
        							</ul>
       							
