--- a/fmn/fmn_util/FMNShopHelperS22_V3.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V3.html
@@ -13,12 +13,10 @@
 	
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
-
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
@@ -47,12 +45,16 @@
     					</button>
     						<div class="collapse navbar-collapse" id="navbarNav">
       							<ul class="navbar-nav">
-      								<li class="nav-item">
-        								<a class="nav-link" href="FMNExUserMaker_V2.html">선수 생성 도우미(기존)</a>
-        							</li>
-        							<li class="nav-item">
-        								<a class="nav-link" href="FMNUserMaker_V2.html">선수 생성 도우미(신규)</a>
-        							</li>
+      								<li class="nav-item dropdown">
+							          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							            선수 신청
+							          </a>
+							          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							            <li><a class="dropdown-item" href="FMNUserMaker_V2.html">신규 선수</a></li>
+							            <li><a class="dropdown-item" href="FMNExUserMaker_V2.html">기존 선수</a></li>
+							          </ul>
+							        </li>
+      								
         							<li class="nav-item">
         								<a class="nav-link active" aria-current="page" href="FMNShopHelperS22_V2.html">상점 도우미 (S22)</a>
         							</li>
