1Change Link Addr 2Remove Left Nav Bar 3Add Top Nav Bar

--- a/fmn/fmn_util/FMNUserMaker_V3.html
+++ b/fmn/fmn_util/FMNUserMaker_V3.html
@@ -67,7 +67,7 @@
 				
 				
 			<h1 class="text-center">FMN 신규 선수 신청</h1>
-	        <table class="table table-Primary table-striped table-hover table-bordered">
+	        <table class="table table-Primary table-hover table-sm table-bordered">
 				<tbody>
 					<tr>
 						<th scope="row">선수명</th>
