--- a/fmn/fmn_util/FMNExUserMaker_V3.html
+++ b/fmn/fmn_util/FMNExUserMaker_V3.html
@@ -62,7 +62,7 @@
 				</nav>
 				
 			<h1 class="text-center">FMN 기존 선수 신청</h1>
-	        <table class="table table-Primary table-striped table-hover table-bordered">
+	        <table class="table table-Primary table-hover table-sm table-bordered">
 				<tbody>
 					<tr>
 						<th scope="row">기존선수명</th>
