--- a/fmn/fmn_util/FMNShopHelperS22_V3.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V3.html
@@ -71,26 +71,26 @@
 		        <input type="hidden" id="maximum" value="7">
 				<button id="btnPopup" class="btn btn-primary">어빌가중치 보기</button>
 				<button id="btnStat" class="btn btn-primary">능력치탭 바로가기</button>
-				<table class="table table-dark table-striped table-hover table-bordered">
+				<table class="table table-Primary table-hover table-sm table-bordered">
 					<tbody>
 						<tr>
 							<th scope="row">선수명</th>
 							<td colspan="4">
-								<input type="text" id="name" style="min-width:200px; width:50%;">
+								<input type="text" id="name" style="min-width:100px; width:30%;">
 							</td>
 						</tr>
 						<tr>
-								<th style="min-width:100px;">스테로이드</th>
+							<th>스테로이드</th>
 							<td colspan="4">
 								<input type="checkbox" id="steroid" value="Y" checked><label for="steroid">사용</label>
 							</td>
 						</tr>
 						<tr>
-							<th style="min-width:100px;">튜터링</th>
+							<th>튜터링</th>
 							<td class="col-sm-1" style="min-width:70px;">
 								<input type="checkbox" id="tutoring" value="Y" checked><label for="tutoring">사용</label>
 							</td>
-							<td class="col-sm-2">
+							<td>
 								<select id="tutoringMinusPlus">
 									<option value="+">+</option>
 									<option value="-">-</option>
@@ -121,7 +121,7 @@
 						
 						 -->
 							<th>엔돌핀</th>
-							<td colspan="2">
+							<td>
 								<input type="checkbox" id="endorphin" value="Y"><label for="endorphin">사용</label>
 							</td>
 							<td>
@@ -140,14 +140,14 @@
 								<input type="number" id="endorphinCnt" max="7" min="0" value="0" style="min-width:70px; max-width:150px;" disabled>
 								<button id="endorphinAdd">추가</button>
 							</td>
-							<td>
+							<td colspan="2">
 								<input id="endorphinText" disabled>
 								<button id="endorphinReset">리셋</button>
 							</td>
 						</tr>
 						<tr>
 							<th>세트피스</th>
-							<td colspan="2">
+							<td>
 								<input type="checkbox" id="setpiece" value="Y"><label for="setpiece">사용</label>
 							</td>
 							<td>
@@ -161,7 +161,7 @@
 								<input type="number" id="setpieceCnt" max="7" min="0" value="0" style="min-width:70px; max-width:150px;" disabled>
 								<button id="setpieceAdd">추가</button>
 							</td>
-							<td>
+							<td colspan="2">
 								<input id="setpieceText" disabled>
 								<button id="setpieceReset">리셋</button>
 							</td>
@@ -247,7 +247,7 @@
 							<td>
 								<input type="checkbox" id="fusionDivision" value="Y"><label for="fusionDivision">사용</label>
 							</td>
-							<td style="min-width:160px;">
+							<td>
 								갯수
 								<input type="number" id="fusionDivisionCnt" value="0" style="min-width:50px; max-width:100px;" disabled>
 							</td>
@@ -270,7 +270,7 @@
 						</tr>				
 						<tr>
 							<td colspan="5">
-								<textarea id="result" rows="10" style="width:100%;" placeholder="상점 갯수 초과하면 리셋 됩니다. 통분입력은 깎을꺼(-), 올릴꺼(+) 순으로 입력됩니다."></textarea>
+								<textarea id="result" rows="5" style="width:100%;" placeholder="상점 갯수 초과하면 리셋 됩니다. 통분입력은 깎을꺼(-), 올릴꺼(+) 순으로 입력됩니다."></textarea>
 								<button id="copy" class="btn btn-primary" style="width:100%;">복사하기</button>
 							</td>
 						</tr>
