--- a/fmn/fmn_util/FMNShopHelperS22_V3.html
+++ b/fmn/fmn_util/FMNShopHelperS22_V3.html
@@ -69,8 +69,8 @@
 				
 				<h1 class="text-center">FMN S22 상점</h1>
 		        <input type="hidden" id="maximum" value="7">
-				<button id="btnPopup" class="btn btn-primary">어빌가중치 보기</button>
-				<button id="btnStat" class="btn btn-primary">능력치탭 바로가기</button>
+				<button id="btnPopup" class="btn btn-primary btn-sm">어빌가중치 보기</button>
+				<button id="btnStat" class="btn btn-primary btn-sm">능력치탭 바로가기</button>
 				<table class="table table-Primary table-hover table-sm table-bordered">
 					<tbody>
 						<tr>
@@ -80,13 +80,13 @@
 							</td>
 						</tr>
 						<tr>
-							<th>스테로이드</th>
+							<th style="min-width:100px;">스테로이드</th>
 							<td colspan="4">
 								<input type="checkbox" id="steroid" value="Y" checked><label for="steroid">사용</label>
 							</td>
 						</tr>
 						<tr>
-							<th>튜터링</th>
+							<th style="min-width:100px;">튜터링</th>
 							<td class="col-sm-1" style="min-width:70px;">
 								<input type="checkbox" id="tutoring" value="Y" checked><label for="tutoring">사용</label>
 							</td>
