--- a/fmn/fmn_util/index.html
+++ b/fmn/fmn_util/index.html
@@ -53,7 +53,7 @@
 							        </li>
       								
         							<li class="nav-item">
-        								<a class="nav-link" aria-current="page" href="FMNShopHelperS22_V3.html">상점 도우미 (S22)</a>
+        								<a class="nav-link" aria-current="page" href="FMNShopHelperS24.html">상점 도우미 (S24)</a>
         							</li>
        							</ul>
       							
