--- a/fmn/fmn_util/FMNUserMaker_V3.html
+++ b/fmn/fmn_util/FMNUserMaker_V3.html
@@ -338,6 +338,7 @@
      		Position_check();
      		document.getElementById("result").innerHTML += "주요스탯 : " + $("#stat1 option:selected").val()+" - "+$("#Stat1Cnt option:selected").val()+" / "+$("#stat2 option:selected").val()+" - "+$("#Stat2Cnt option:selected").val()+" / "+$("#stat3 option:selected").val()+" - "+$("#Stat3Cnt option:selected").val()+" / "+$("#stat4 option:selected").val()+" - "+$("#Stat4Cnt option:selected").val()+" / "+$("#stat5 option:selected").val()+" - "+$("#Stat5Cnt option:selected").val()+'\n';
      		document.getElementById("result").innerHTML += "포지션 변경 가능 여부 : " + $("input[name=change_pos]:checked").val()+'\n';
+     		document.getElementById("result").innerHTML += "추천인 : " + $("#recommend").val()+'\n';
      		
      	}
      	
